polish swagger
