# src/routes/role.routes.js
@@ -1,9 +1,0 @@
-import { Router } from 'express'
-
-const router = Router()
-
-router.get('/helper', (req, res) => {
-  res.json({ success: true, message: 'Get helper' })
-})
-
-export default router
