# src/swagger-output.json
@@ -5,15 +5,18 @@
     "description": "Proyecto Final Nivel 2",
     "version": "1.0.0"
   },
-  "host": "pf-n2.onrender.com",
+  "host": "localhost:3011",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/api/user/user": {
       "post": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "description": "Crea un nuevo usuario.",
         "parameters": [
           {
             "name": "origin",
@@ -28,17 +31,55 @@
           {
             "name": "body",
             "in": "body",
+            "description": "1: Administrador, 2: Usuario",
             "schema": {
               "type": "object",
               "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Gabriel Ferrin"
+                },
                 "email": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "gabriel@ferrin.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "12345678"
+                },
+                "role_id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "country_id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "bio": {
+                  "type": "string",
+                  "example": "bio"
+                },
+                "image": {
+                  "type": "string",
+                  "example": "image"
                 }
-              }
+              },
+              "required": [
+                "name",
+                "email",
+                "password",
+                "role_id",
+                "country_id",
+                "bio",
+                "image"
+              ]
             }
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -48,7 +89,10 @@
         }
       },
       "get": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "description": "Obtiene usuario por su id.",
         "parameters": [
           {
             "name": "origin",
@@ -82,7 +126,10 @@
         }
       },
       "patch": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "description": "Actualiza los datos del usuario.",
         "parameters": [
           {
             "name": "origin",
@@ -97,7 +144,8 @@
           {
             "name": "userId",
             "in": "query",
-            "type": "string"
+            "description": "User id",
+            "type": "number"
           },
           {
             "name": "body",
@@ -105,11 +153,55 @@
             "schema": {
               "type": "object",
               "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Gabriel Ferrin"
+                },
                 "email": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "gabriel@ferrin.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "12345678"
+                },
+                "role_id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "country_id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "bio": {
+                  "type": "string",
+                  "example": "bio"
+                },
+                "image": {
+                  "type": "string",
+                  "example": "image"
                 }
-              }
+              },
+              "required": [
+                "name",
+                "email",
+                "password",
+                "role_id",
+                "country_id",
+                "bio",
+                "image"
+              ]
             }
+          },
+          {
+            "name": "in",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "schema",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -125,6 +217,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
@@ -161,6 +256,9 @@
     },
     "/api/user/all": {
       "get": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
@@ -194,7 +292,10 @@
     },
     "/api/post/post": {
       "post": {
-        "description": "",
+        "tags": [
+          "Publicaciones"
+        ],
+        "description": "Crea una nueva categoria.",
         "parameters": [
           {
             "name": "origin",
@@ -207,20 +308,45 @@
             "type": "string"
           },
           {
-            "name": "userId",
-            "in": "query",
-            "type": "string"
-          },
-          {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
+                "title": {
+                  "type": "string",
+                  "example": "La política es muy sucia"
+                },
+                "content": {
+                  "type": "string",
+                  "example": "Es solo mi manera de pensar"
+                },
+                "user_id": {
+                  "type": "number",
+                  "example": 14
+                },
                 "categories": {
-                  "example": "any"
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "category_id": {
+                        "type": "number",
+                        "example": 3
+                      }
+                    },
+                    "required": [
+                      "category_id"
+                    ]
+                  }
                 }
-              }
+              },
+              "required": [
+                "title",
+                "content",
+                "user_id",
+                "categories"
+              ]
             }
           }
         ],
@@ -237,7 +363,10 @@
         }
       },
       "patch": {
-        "description": "",
+        "tags": [
+          "Publicaciones"
+        ],
+        "description": "Actualiza una publicación.",
         "parameters": [
           {
             "name": "origin",
@@ -252,10 +381,43 @@
           {
             "name": "userId",
             "in": "query",
-            "type": "string"
+            "description": "User id",
+            "type": "number"
           },
           {
             "name": "postId",
+            "in": "query",
+            "description": "Post id",
+            "type": "number"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "type": "string",
+                  "example": "I love sports"
+                },
+                "content": {
+                  "type": "string",
+                  "example": "Im retaking golf. I used to play a lot!"
+                }
+              },
+              "required": [
+                "title",
+                "content"
+              ]
+            }
+          },
+          {
+            "name": "in",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "schema",
             "in": "query",
             "type": "string"
           }
@@ -273,7 +435,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Categorías"
+        ],
+        "description": "Crea una nueva categoria.",
         "parameters": [
           {
             "name": "origin",
@@ -311,7 +476,10 @@
     },
     "/api/post/all": {
       "get": {
-        "description": "",
+        "tags": [
+          "Publicaciones"
+        ],
+        "description": "Devuelve todas las publicaciones.",
         "parameters": [
           {
             "name": "origin",
@@ -336,7 +504,10 @@
     },
     "/api/post/by-category": {
       "get": {
-        "description": "",
+        "tags": [
+          "Publicaciones"
+        ],
+        "description": "Devuelve las publicaciones de una categoria.",
         "parameters": [
           {
             "name": "origin",
@@ -366,7 +537,10 @@
     },
     "/api/post/by-title": {
       "get": {
-        "description": "",
+        "tags": [
+          "Publicaciones"
+        ],
+        "description": "Devuelve las publicaciones que contengan la palabra clave.",
         "parameters": [
           {
             "name": "origin",
@@ -396,7 +570,10 @@
     },
     "/api/comment/comment": {
       "post": {
-        "description": "",
+        "tags": [
+          "Comentarios"
+        ],
+        "description": "Crea un nuevo comentario.",
         "parameters": [
           {
             "name": "origin",
@@ -407,6 +584,32 @@
             "name": "host",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user_id": {
+                  "type": "number",
+                  "example": 14
+                },
+                "post_id": {
+                  "type": "number",
+                  "example": 14
+                },
+                "content": {
+                  "type": "string",
+                  "example": "I dont agree. Its the easiest thing!"
+                }
+              },
+              "required": [
+                "user_id",
+                "post_id",
+                "content"
+              ]
+            }
           }
         ],
         "responses": {
@@ -422,7 +625,10 @@
         }
       },
       "patch": {
-        "description": "",
+        "tags": [
+          "Comentarios"
+        ],
+        "description": "Actualiza un comentario.",
         "parameters": [
           {
             "name": "origin",
@@ -437,12 +643,14 @@
           {
             "name": "userId",
             "in": "query",
-            "type": "string"
+            "description": "User id",
+            "type": "number"
           },
           {
             "name": "commentId",
             "in": "query",
-            "type": "string"
+            "description": "Comment id",
+            "type": "number"
           },
           {
             "name": "body",
@@ -451,18 +659,29 @@
               "type": "object",
               "properties": {
                 "content": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "I agree. Its the easiest thing!"
                 }
-              }
+              },
+              "required": [
+                "content"
+              ]
             }
+          },
+          {
+            "name": "in",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "schema",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -473,7 +692,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Comentarios"
+        ],
+        "description": "Elimina un comentario.",
         "parameters": [
           {
             "name": "origin",
@@ -514,7 +736,10 @@
     },
     "/api/comment/comments": {
       "get": {
-        "description": "",
+        "tags": [
+          "Comentarios"
+        ],
+        "description": "Devuelve los comentarios de una publicación.",
         "parameters": [
           {
             "name": "origin",
@@ -545,31 +770,12 @@
         }
       }
     },
-    "/api/role/helper": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "origin",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "host",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api/category/category": {
       "post": {
-        "description": "",
+        "tags": [
+          "Categorías"
+        ],
+        "description": "Crea una nueva categoria.",
         "parameters": [
           {
             "name": "origin",
@@ -583,6 +789,33 @@
           },
           {
             "name": "userId",
+            "in": "query",
+            "description": "User id",
+            "type": "number"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Estudios Superiores"
+                }
+              },
+              "required": [
+                "name"
+              ]
+            }
+          },
+          {
+            "name": "in",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "schema",
             "in": "query",
             "type": "string"
           }
@@ -606,7 +839,10 @@
         }
       },
       "patch": {
-        "description": "",
+        "tags": [
+          "Categorías"
+        ],
+        "description": "Actualiza una categoria.",
         "parameters": [
           {
             "name": "origin",
@@ -621,10 +857,38 @@
           {
             "name": "userId",
             "in": "query",
-            "type": "string"
+            "description": "User id",
+            "type": "number"
           },
           {
             "name": "categoryId",
+            "in": "query",
+            "description": "Category id",
+            "type": "number"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Educación"
+                }
+              },
+              "required": [
+                "name"
+              ]
+            }
+          },
+          {
+            "name": "in",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "schema",
             "in": "query",
             "type": "string"
           }
@@ -645,7 +909,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Categorías"
+        ],
+        "description": "Elimina una categoria.",
         "parameters": [
           {
             "name": "origin",
@@ -660,7 +927,8 @@
           {
             "name": "userId",
             "in": "query",
-            "type": "string"
+            "description": "User id",
+            "type": "number"
           },
           {
             "name": "categoryId",
@@ -689,7 +957,10 @@
     },
     "/api/category/all": {
       "get": {
-        "description": "",
+        "tags": [
+          "Categorías"
+        ],
+        "description": "Devuelve todas las categorías.",
         "parameters": [
           {
             "name": "origin",
@@ -711,6 +982,35 @@
           }
         }
       }
+    },
+    "/api/helper/server-active": {
+      "get": {
+        "tags": [
+          "Otras"
+        ],
+        "description": "Verifica si el servidor está activo.",
+        "parameters": [
+          {
+            "name": "origin",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "host",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
-  }
+  },
+  "ignore": [
+    "origin",
+    "host"
+  ]
 }
